<resources>
    <string name="app_name">CubeGuide lab2-3</string>

    <string name="logo_description">Rubik\'s Cube</string>
    <string name="megaminx_description">Megaminx</string>
    <string name="four_on_four">4x4 cube</string>
    <string name="squire_one_description">Squire-1</string>
    <string name="mirror_description">Mirror cube</string>
    <string name="two_on_two_description">2x2 cube</string>

    <string name="site_name">CubeGuide</string>
    <string name="site_description">Обучающий метод по сборке кубика Рубика</string>
    <string name="hint_enter_name">Введите ваше имя..</string>

    <string name="shop_button">Магазин</string>
    <string name="test_button">Тест</string>
    <string name="stopwatch_button">Секундомер</string>
    <string name="share_button">Поделиться</string>
    <string name="share_message">Привет! Я изучаю Android и сделал крутой квиз CubeGuide\!</string>

    <string name="stopwatch_title">Секундомер</string>
    <string name="start_button">Старт</string>
    <string name="pause_button">Пауза</string>
    <string name="reset_button">Обновить</string>

    <string name="quiz_title">Викторина</string>
    <string name="question_progress_format">Вопрос %1$d из %2$d</string>
    <string name="question_placeholder">Текст вопроса загружается..</string>
    <string name="answer_hint">Ваш ответ</string>
    <string name="button_next">Далее</string>

    <string name="result_title">Результат</string>
    <string name="result_score_format">Правильно: %1$d из %2$d</string>
    <string name="initial_score">0/6</string>
    <string name="button_home">На главную</string>

    <string name="q1_text">Какие из этих головоломок имеют форму куба?</string>
    <string name="q1_a1">Megaminx</string>
    <string name="q1_a2">2x2</string>
    <string name="q1_a3">Mirror cube</string>
    <string name="q1_a4">Pyraminx</string>

    <string name="q2_text">Какие методы исользуются для скоростной сборки?</string>
    <string name="q2_a1">CFOP</string>
    <string name="q2_a2">Roux</string>
    <string name="q2_a3">Послойный</string>
    <string name="q2_a4">Интуитивный</string>

    <string name="q3_text">сколько граней у классического кубика Рубика? (число)</string>
    <string name="q3_a1">6</string>
    <string name="q3_a2">шесть</string>
    <string name="q3_a3">six</string>

    <string name="q4_text">Как называется головоломка в форме додекаэдра?</string>
    <string name="q4_a1">megaminx</string>
    <string name="q4_a2">мегаминкс</string>

    <string name="q5_text">Как называется эта головоломка?</string>
    <string name="q5_a1">4x4</string>
    <string name="q5_a2">4х4</string>
    <string name="q5_a3">4 на 4</string>
    <string name="q5_a4">четыре на четыре</string>
    <string name="q5_a5">четыре x четыре</string>
    <string name="q5_a6">четыре х четыре</string>
    <string name="q5_a7">four on four</string>

    <string name="q6_text">Как называется эта головоломка?</string>
    <string name="q6_a1">megaminx</string>
    <string name="q6_a2">мегаминкс</string>

    <string name="nav_home">Главная</string>
    <string name="nav_favourites">Избранное</string>
    <string name="nav_cart">Корзина</string>
    <string name="ad_title">РЕКЛАМА</string>
    <string name="ad_desc">Здесь могла быть ваша реклама кубиков\!</string>
    <string name="button_add_to_cart">В корзины</string>
    <string name="button_add_to_favourites">В избранное</string>
    <string name="price_format">%d </string>

    <string name="title_add_product">Добавить товар</string>
    <string name="btn_pick_image">Выбрать фото</string>
    <string name="hint_product_name">Название товара</string>
    <string name="hint_product_desc">Описание</string>
    <string name="hint_product_price">Цена (число)</string>
    <string name="label_category">Категория:</string>
    <string name="btn_save_product">Сохранить в БД</string>
    <string name="toast_saved">Товар добавлен!</string>
    <string name="toast_error_fields">Заполните поля и категорию</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>