<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/blue"
android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"

            android:contentDescription="@string/logo_description"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:barrierDirection="bottom"
            app:constraint_referenced_ids="logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:orientation="vertical"
            app:layout_constraintGuide_begin="21dp" />

        <TextView
            android:id="@+id/siteName"
            style="@style/siteName_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/description"
            style="@style/siteName_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/site_description"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/siteName" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="name"
            android:backgroundTint="@color/white"
            android:hint="@string/hint_enter_name"
            android:inputType="text"

            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/flow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            app:constraint_referenced_ids="megaminx, four_on_four, squire_one, mirror, two_on_two"

            app:flow_horizontalGap="20dp"
            app:flow_horizontalStyle="spread"
            app:flow_verticalGap="20dp"
            app:flow_wrapMode="chain"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/enterName" />

        <ImageView
            android:id="@+id/megaminx"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/megaminx"
            app:layout_constraintTop_toBottomOf="@+id/enterName" />

        <ImageView
            android:id="@+id/four_on_four"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/four_on_four" />

        <ImageView
            android:id="@+id/squire_one"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/squire_one" />

        <ImageView
            android:id="@+id/mirror"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/mirror" />

        <ImageView
            android:id="@+id/two_on_two"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/two_on_two" />

        <Button
            android:id="@+id/shop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            android:text="@string/shop_button"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/test_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/flow" />

        <Button
            android:id="@+id/test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/test_button"

            app:layout_constraintEnd_toStartOf="@id/share_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/shop_button"
            app:layout_constraintTop_toTopOf="@+id/shop_button" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/share_button"

            app:layout_constraintStart_toEndOf="@id/test_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/test_button"
            app:layout_constraintHorizontal_chainStyle="spread" />

        <Button
            android:id="@+id/stopwatch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/stopwatch_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/shop_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>